--- a/src/index.html
+++ b/src/index.html
@@ -17,19 +17,19 @@
                         <form class="requires-validation" novalidate>
 
                             <div class="col-md-12">
-                               <input class="form-control" type="text" name="name" placeholder="Full Name" onblur="validateName(event)">
+                               <input class="form-control" type="text" name="name" placeholder="Full Name" onblur="validateName(event)" required>
                                <div class="valid-feedback">Username field is valid!</div>
                                <div class="invalid-feedback">Username field is invalid!</div>
                             </div>
 
                             <div class="col-md-12">
-                                <input class="form-control" type="email" name="email" placeholder="E-mail Address" required>
+                                <input class="form-control" type="email" name="email" placeholder="E-mail Address" onblur="validateName(event)" required>
                                  <div class="valid-feedback">Email field is valid!</div>
                                  <div class="invalid-feedback">Email field is invalid!</div>
                             </div>
 
                             <div class="col-md-12">
-                                <input class="form-control" type="text" name="country" placeholder="Country" required
+                                <input class="form-control" type="text" name="country" placeholder="Country" onblur="validateName(event)" required
                                     oninput="handleFillCountry(event)">
                                 <div class="search-box">
                                     countries
@@ -39,7 +39,7 @@
                              </div>
 
                            <div class="col-md-12">
-                              <input class="form-control" type="password" name="password" placeholder="Password" required>
+                              <input class="form-control" type="password" name="password" placeholder="Password"  onblur="validateName(event)" required>
                                <div class="valid-feedback">Password field is valid!</div>
                                <div class="invalid-feedback">Password field is invalid!</div>
                            </div>
